@@ -1,5 +1,6 @@
 #!/bin/bash
 
+set -x
 if [ -d /Applications/cultibox ]; then
     echo "  * Finding an old Cultibox configuration, saving datas..."
     /Applications/cultibox/xamppfiles/xampp stop
@@ -7,5 +8,3 @@ if [ -d /Applications/cultibox ]; then
     cp -R /Applications/cultibox/xamppfiles/var/mysql /tmp/cultibox_backup
     echo "...OK!"
 fi
-
-
