@@ -606,7 +606,7 @@ td.welcome-link img{
 }
 
 /* css for timepicker */
-#ui-datepicker-div, .ui-datepicker{ width: 17%; font-size: 90%; border-radius:4px;}
+#ui-datepicker-div, .ui-datepicker{ width: 25%; font-size: 90%; border-radius:4px;}
 .ui-timepicker-div .ui-widget-header { margin-bottom: 8px; }
 .ui-timepicker-div dl { text-align: left; }
 .ui-timepicker-div dl dt { height: 25px; margin-bottom: -25px; }
